[package]
name = "astar_trick"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "0.3.3"
lazy_static = "1.4.0"
priority-queue = "1.3.2"
maze_generator = "2.0.0"